tdf#112605 OSX refactor SalAquaTimer

Drops all the static calls and variables from SalAquaTimer
and moves all timer handling logic inside the class.

This also fixes the leak in timerElapsed.

Change-Id: Ie7a1a8fffb70b8579ec6876eed10a275d2f06d27
Reviewed-on: https://gerrit.libreoffice.org/42913
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Jan-Marek Glogowski <glogow@fbihome.de>